--- a/src/components/news/news.css
+++ b/src/components/news/news.css
@@ -1,4 +1,4 @@
-.music-container {
+.news-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
@@ -7,18 +7,20 @@
 h1 {
     margin-top: 20px;
 }
+
 h5 {
     font-size: 25px;
     letter-spacing: 2px;
-    text-transform: uppercase;
     font-weight: 200;
+    text-transform: uppercase;
 }
-.music {
+
+.news {
     display: block;
     gap: 1rem;
 }
 
-.music a {
+.news h4 {
     color: rgb(65, 61, 61);
     text-decoration: none;
     cursor: pointer;
@@ -26,13 +28,13 @@ h5 {
     font-size: 20px;
 }
 
-.music a:hover {
+.news h4:hover {
     text-decoration: underline;
 }
 
 /*----- MEDIA QUERIES TABLET (MEDIUM DEVICES)-------*/
 @media screen and (max-width: 1200px) {
-    .music-container {
+    .news-container {
         grid-template-columns: repeat(3, 1fr);
     }
 
@@ -45,7 +47,7 @@ h5 {
 }
 
 @media screen and (max-width: 1024px) {
-    .music-container {
+    .news-container {
         grid-template-columns: repeat(3, 1fr);
     }
 
@@ -57,7 +59,7 @@ h5 {
 }
 
 @media screen and (max-width: 952px) {
-    .music-container {
+    .news-container {
         grid-template-columns: repeat(3, 1fr);
     }
 
@@ -69,7 +71,7 @@ h5 {
 
 /*----- MEDIA QUERIES PHONES (SMALL DEVICES)-------*/
 @media screen and (max-width: 768px) {
-    .music-container {
+    .news-container {
         grid-template-columns: 1fr;
         gap: 1rem;
     }
