--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -67,7 +67,7 @@ h3 {
     line-height: 65px;
     font-size: 10px;
     color: white;
-    margin-left: -20px;
+    margin-left: 20px;
     box-sizing: border-box;
     border-bottom: 1px solid black;
     transition: .5s;
@@ -90,8 +90,8 @@ label #btn, label #cancel {
 
 label #btn {
     left: 12px;
-    top: 27px;
-    font-size: 25px;
+    top: 25px;
+    font-size: 43px;
     color: white;
     padding: 7px 9px;
     transition: all .5s;
@@ -103,7 +103,7 @@ label #cancel {
     z-index: 1111;
     left: -185px;
     top: 17px;
-    font-size: 20px;
+    font-size: 30px;
     color: white;
     padding: 4px 9px;
     transition: all .4s ease-in-out;
@@ -138,7 +138,7 @@ section {
 }
 
 .drop-link {
-    margin-top: 10px;
+    margin-top: 14px;
     text-decoration: none;
     color: white;
     padding: 6px 8px 6px 20px;
@@ -148,6 +148,7 @@ section {
     background: none;
     cursor: pointer;
     border: none;
+    
 }
 
 .dropdown {
@@ -157,13 +158,15 @@ section {
 
 .drop-menu {
     position: absolute;
-    width: 250px;
+    width: 2000px;
     left: 30px;
     top: calc(100% + .25rem);
-    background-color: #333;
+    background-color: #000;
     color: white;
-    font-size: 20px;
-    padding: .5rem;
+    z-index: 10001;
+    font-size: 10px;
+    font-weight: 200;
+    padding: .75rem;
     border-radius: .25rem;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .1);
     opacity: 0;
@@ -183,7 +186,9 @@ section {
     padding-right: 15px;
     float: right;
 }
-
+.sub-btn {
+    bottom: 0;
+}
 .drop-menu p {
     font-size: 10px;
 }
