--- a/src/components/music/music.css
+++ b/src/components/music/music.css
@@ -5,13 +5,31 @@
     margin-top: 30px;
 }
 h1 {
-    margin-top: 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-weight: 400;
+    font-size: 40px;
+    text-transform: uppercase;
 }
+
 h5 {
     font-size: 25px;
     letter-spacing: 2px;
     text-transform: uppercase;
     font-weight: 200;
+}
+
+.h-submit {
+    width: 260px;
+    background-color: #0a0a13;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    font-size: 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    height: 50px;
 }
 .music {
     display: block;
@@ -37,7 +55,7 @@ h5 {
     }
 
     .img {
-        width: 330px;
+        width: 350px;
         height: 330px;
     }
 
@@ -78,6 +96,10 @@ h5 {
         width: 660px;
         height: 400px;
     }
+    h1 {
+        font-size: 30px;
+    }
+
 }
 
 @media screen and (max-width: 700px) {
@@ -86,12 +108,29 @@ h5 {
         height: 400px;
     }
 
-    
+    h1 {
+        font-size: 30px;
+    }
 }
 
 @media screen and (max-width: 600px) {
     .img {
         width: 450px;
+    }
+
+    h1 {
+        font-size: 25px;
+    }
+    
+}
+@media screen and (max-width: 300px) {
+    .img {
+        width: 320px;
+        height: 320px;
+    }
+
+    h1 {
+        font-size: 25px;
     }
     
 }
