--- a/src/components/video/video.css
+++ b/src/components/video/video.css
@@ -15,6 +15,15 @@ h1 {
     text-transform: uppercase;
 }
 
+.latest {
+    font-size: 20px;
+    background-color: #000;
+    color: #fff;
+    margin: 10px 10px;
+    width: 200px;
+    border-radius: 3px;
+}
+
 .iframe-2 {
     width: 90% !important;
 }
