--- a/src/components/music/music.css
+++ b/src/components/music/music.css
@@ -36,6 +36,24 @@ h5 {
     gap: 1rem;
 }
 
+.spacer {
+    height: 20px;
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    content: "",
+}
+
+.latest {
+    font-size: 20px;
+    background-color: #000;
+    color: #fff !important;
+    margin: 10px 10px;
+    width: 200px;
+    border-radius: 3px;
+    z-index: 1000;
+}
+
 .music a {
     color: rgb(65, 61, 61);
     text-decoration: none;
@@ -125,7 +143,7 @@ h5 {
 }
 @media screen and (max-width: 300px) {
     .img {
-        width: 320px;
+        width: 300px;
         height: 320px;
     }
 
