--- a/src/components/video/video.css
+++ b/src/components/video/video.css
@@ -25,8 +25,6 @@ h1 {
 }
 
 .iframe-2 {
-    width: 55% !important;
-    height: 
 }
 /*----- MEDIA QUERIES TABLET (MEDIUM DEVICES)-------*/
 @media screen and (max-width: 1200px) {
@@ -34,13 +32,13 @@ h1 {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    iframe {
+    .iframe {
         width: 350px;
         height: 315px;
     }
 
     .frame-2 {
-        height: 315px;
+        height: 515px;
     }
 
     
@@ -51,12 +49,13 @@ h1 {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    iframe {
+    .iframe {
         width: 300px;
         height: 315px;
     }
     .frame-2 {
-        height: 315px;
+        width: 560px;
+        height: 515px;
     }
     
 }
@@ -66,7 +65,7 @@ h1 {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    iframe {
+    .iframe {
         width: 240px;
         height: 315px;
     }
@@ -82,12 +81,13 @@ h1 {
         gap: 1rem;
     }
 
-    iframe {
+    .iframe {
         width: 660px;
         height: 315px;
     }
     .frame-2 {
         height: 315px;
+        width: 90%;
     }
 
     h1 {
@@ -96,12 +96,13 @@ h1 {
 }
 
 @media screen and (max-width: 700px) {
-    iframe {
+    .iframe {
         width: 550px;
         height: 315px;
     }
     .frame-2 {
         height: 315px;
+        width: 90%;
     }
 
     h1 {
@@ -111,7 +112,7 @@ h1 {
 }
 
 @media screen and (max-width: 600px) {
-    iframe {
+    .iframe {
         width: 400px;
         height: 315px;
     }
@@ -125,7 +126,7 @@ h1 {
 }
 
 @media screen and (max-width: 300px) {
-    iframe {
+    .iframe {
         width: 300px;
         height: 315px;
     }
